@@ -140,6 +140,23 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>December 1st 2008</h3>
+          <p>
+          <b>Unstable</b>
+          version 2.25.2 was released!
+          New in this release
+          </p>
+          <ul>
+            <li>print vendor and product id while probing devices. provide some more device informations for easier bug triaging.</li>
+            <li>meet GnomeGoal <a href="http://live.gnome.org/GnomeGoals/CleanupGTKIncludes">http://live.gnome.org/GnomeGoals/CleanupGTKIncludes</a></li>
+            <li>Use gtk_show_uri to open files and xdg-open i.s.o. gnome-open</li>
+            <li>add support for cams which support only one resolution</li>
+            <li>add support for webcams which support only one resolution</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-December/msg00011.html">full release notes</a>)
+
           <h3>November 24th 2008</h3>
           <p>
           <b>Stable</b>
@@ -169,66 +186,6 @@
           </ul>
           <a href="download">Download it</a>
           (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-November/msg00018.html">full release notes</a>)
-
-          <h3>October 20th 2008</h3>
-          <p>
-          <b>Stable</b>
-          version 2.24.1 was released!
-          New in this release
-          </p>
-          <ul>
-            <li>exit correctly with unknown command line arguments</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-October/msg00023.html">full release notes</a>)
-
-          <h3>September 22nd 2008</h3>
-          <p>
-          <b>Stable</b>
-          version 2.24.0 was released!
-          New in this release
-          </p>
-          <ul>
-            <li>update the cheese dependencies</li>
-            <li>use the correct translated plural form when deleting more than one item from the thumbnail bar</li>
-            <li>do not add a new item to the thumbnail bar, if its already there</li>
-            <li>documentation update, courtesy of Joshua Henderson</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-September/msg00117.html">full release notes</a>)
-
-          <h3>September 8th 2008</h3>
-          <p>
-          <b>Unstable</b>
-          version 2.23.92 was released!
-          New in this release
-          </p>
-          <ul>
-            <li>old photos and videos (before 2.24) are now available in cheese 2.24</li>
-            <li>cheese crashes no more when no device is set in gconf</li>
-            <li>display toolbar when entering into fullscreen mode</li>
-            <li>documentation update</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-September/msg00067.html">full release notes</a>)
-
-          <h3>September 1st 2008</h3>
-          <p>
-          <b>Unstable</b>
-          version 2.23.91 was released!
-          New in this release
-          </p>
-          <ul>
-            <li>cheese.desktop file now respects freedesktop SPEC</li>
-            <li>add the dynamic bindir to the dbus file</li>
-            <li>update waf to 1.4.3 and make it working again</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-September/msg00015.html">full release notes</a>)
 
         </div>
       </div><!-- bottom -->
