@@ -1,3 +1,9 @@
+2008-12-02  daniel g. siegel <dgsiegel@gmail.com>
+
+	* projects.gnome.org/cheese/download.html,
+	  projects.gnome.org/cheese/index.html: 
+	  populate the cheese 2.25.2 release
+
 2008-11-26  Vincent Untz  <vuntz@gnome.org>
 
 	* www.gnome.org/index.wml: fix date for Gran Canaria Desktop Summit
